--- a/src/main/resources/templates/member/index.html
+++ b/src/main/resources/templates/member/index.html
@@ -55,8 +55,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
-                        <li><a href="../account/register.html" th:href="@{../register}">Register</a></li>
+                        <li><a href="../account/index.html" th:href="@{/user/logout}">Sign out</a></li>
+                        <li><a href="../account/register.html" th:href="@{/user/goRegister}">Register</a></li>
                     </ul>
                 </li>
             </ul>
