--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -42,8 +42,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../user/index.html" th:href="@{user/logout}">Sign out</a></li>
-                        <li><a href="../user/register.html" th:href="@{user/register}">Register</a></li>
+                        <li><a href="../user/index.html" th:href="@{/user/logout}">Sign out</a></li>
+                        <li><a href="../user/register.html" th:href="@{/user/register}">Register</a></li>
                     </ul>
                 </li>
             </ul>
