--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../member/index.html" th:href="@{member/index}">Tickets</a>
+            <a class="navbar-brand" href="../member/index.html" th:href="@{/member/index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,8 +60,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../user/index.html" th:href="@{../logout}">Sign out</a></li>
-                        <li><a href="../user/register.html" th:href="@{../register}">Register</a></li>
+                        <li><a href="../user/index.html" th:href="@{/user/logout}">Sign out</a></li>
+                        <li><a href="../user/register.html" th:href="@{/user/register}">Register</a></li>
                     </ul>
                 </li>
             </ul>
