--- a/src/main/resources/templates/site/info.html
+++ b/src/main/resources/templates/site/info.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8"/>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1"/>-->
-    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
+    <!--<link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>-->
+    <!--<link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>-->
+
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
+    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous">
+
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>
     <link rel="stylesheet" href="../../static/css/w3.css" th:href="@{/css/w3.css}"/>
-    <title>Hotel Index</title>
+    <title>Site Information</title>
 </head>
 <body>
 
@@ -24,23 +35,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{index}">Hostel World</a>
+            <a class="navbar-brand" href="../member/index.html" th:href="@{member/index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html" th:href="@{index}">Hotel Status<span
+                <li><a href="index.html" th:href="@{index}">All Site<span
                         class="sr-only">(current)</span></a></li>
-                <li><a href="record.html" th:href="@{record}">Live Records</a></li>
-                <li class="active"><a href="info.html" th:href="@{info}">Hotel Info</a></li>
-                <li><a href="statistics.html" th:href="@{statistics}">Statistics</a></li>
+                <li class="active"><a href="../site/info.html" th:href="@{info}">Site Info</a></li>
+
+                <!--<li><a href="record.html" th:href="@{record}">Live Records</a></li>-->
+
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
+                       aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
                         <li><a href="../account/register.html" th:href="@{../register}">Register</a></li>
@@ -54,7 +66,8 @@
 
 <div class="mainpage">
 
-
+    <div class="cover"  style="'background-image: url('../../static/img/hotel/hotel1.JPG')'" th:style="'background-image: url(' + ${site.picUrl} + ')'" ></div>
+    <h3 th:text="${site.siteName}">  Good Site </h3>
     <div class="table-responsive">
         <table class="w3-table w3-bordered w3-striped w3-card-4">
             <tr>
@@ -62,173 +75,171 @@
                 <th>Message</th>
             </tr>
             <tr>
-                <td>id</td>
-                <td th:text="${hotel.id}">0000001</td>
-            </tr>
-            <tr>
-                <td>name</td>
-                <td th:text="${hotel.name}">Smith</td>
-            </tr>
-            <tr>
-                <td>status</td>
-                <td th:text="(${hotel.status == 0}) ? 'Not Activated' : 'Activated'">Not Activated</td>
+                <td>Site ID</td>
+                <td th:text="${site.siteID}">0000001</td>
             </tr>
             <tr>
                 <td>Address</td>
-                <td th:text="${hotel.address}">Guangzhou Road, Nanjing</td>
+                <td th:text="${site.address}">Guangzhou Road, Nanjing</td>
             </tr>
             <tr>
-                <td>description</td>
-                <td th:text="${hotel.description}">A good hotel</td>
+                <td>豪华座位数</td>
+                <td th:text="${site.seatNumber_A}">999</td>
+            </tr>
+            <tr>
+                <td>高级座位数</td>
+                <td th:text="${site.seatNumber_B}">888</td>
+            </tr>
+            <tr>
+                <td>普通座位数</td>
+                <td th:text="${site.seatNumber_C}">777</td>
             </tr>
         </table>
     </div>
-    <p style="margin-top: 10px"><a href="javascript:" class="btn btn-primary my-pop-1" role="button">Edit Apply</a>
-        <a href="#" class="btn btn-info my-pop-2" role="button" th:unless="${hotel.status==1}">Apply for open</a>
-    </p>
+    <!--<p style="margin-top: 10px"><a href="javascript:" class="btn btn-primary my-pop-1" role="button">Edit Apply</a>-->
+        <!--<a href="#" class="btn btn-info my-pop-2" role="button" >Apply for open</a>-->
+                                    <!--&lt;!&ndash;th:unless="${hotel.status==1}"&ndash;&gt;-->
+    <!--</p>-->
 
 
 </div>
 
 
-<div class="cd-user-modal cd-user-modal-1">
-    <div class="cd-user-modal-container">
+<!--<div class="cd-user-modal cd-user-modal-1">-->
+    <!--<div class="cd-user-modal-container">-->
 
 
-        <div class="panel panel-info">
-            <!-- Default panel contents -->
-            <div class="panel-heading">Hotel Message Change Apply</div>
-            <form class="form-horizontal" action="info.html" th:action="@{/hotel/edit}" method="post">
-                <div class="form-group">
-                    <label for="name" class="col-sm-2 control-label">Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Hotel Name" required="required" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="address" class="col-sm-2 control-label">Address</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="address" id="address" placeholder="Address" required="required" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="description" class="col-sm-2 control-label">Description</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="description" id="description" placeholder="Description" required="required" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <input id="fileupload" type="file" name="file" data-url="../upload"  />
-                        <p id="fileName"></p>
-                        <div id="progress">
-                            <div class="bar" style="width: 0;"></div>
-                        </div>
-                    </div>
+        <!--<div class="panel panel-info">-->
+            <!--&lt;!&ndash; Default panel contents &ndash;&gt;-->
+            <!--<div class="panel-heading">Site Message Change Apply</div>-->
+            <!--<form class="form-horizontal" action="info.html" th:action="@{/hotel/edit}" method="post">-->
+                <!--<div class="form-group">-->
+                    <!--<label for="name" class="col-sm-2 control-label">Name</label>-->
+                    <!--<div class="col-sm-10">-->
+                        <!--<input type="text" class="form-control" name="name" id="name" placeholder="Hotel Name" required="required" />-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="address" class="col-sm-2 control-label">Address</label>-->
+                    <!--<div class="col-sm-10">-->
+                        <!--<input type="text" class="form-control" name="address" id="address" placeholder="Address" required="required" />-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="description" class="col-sm-2 control-label">Description</label>-->
+                    <!--<div class="col-sm-10">-->
+                        <!--<input type="text" class="form-control" name="description" id="description" placeholder="Description" required="required" />-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<div class="col-sm-offset-2 col-sm-10   col-md-4">-->
+                        <!--<input id="fileupload" type="file" name="file" data-url="../upload"  />-->
+                        <!--<p id="fileName"></p>-->
+                        <!--<div id="progress">-->
+                            <!--<div class="bar" style="width: 0;"></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-                </div>
-                <input type="hidden" id="picUrl"  name="url" value="" />
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <button type="submit" class=" btn btn-primary">Apply</button>
-                        <a href="#" class="btn btn-danger modal-cancel">Cancel</a>
+                <!--</div>-->
+                <!--<input type="hidden" id="picUrl"  name="url" value="" />-->
+                <!--<div class="form-group">-->
+                    <!--<div class="col-sm-offset-2 col-sm-10   col-md-4">-->
+                        <!--<button type="submit" class=" btn btn-primary">Apply</button>-->
+                        <!--<a href="#" class="btn btn-danger modal-cancel">Cancel</a>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
-
-
-            </form>
-        </div>
-
-    </div>
-
-</div>
-
-<div class="cd-user-modal cd-user-modal-2">
-    <div class="cd-user-modal-container">
+                <!--</div>-->
 
 
-        <div class="panel panel-info">
-            <!-- Default panel contents -->
-            <div class="panel-heading">Hotel Open Application</div>
-            <form class="form-horizontal" action="info.html" th:action="@{/hotel/open}" method="post">
-                <div class="form-group">
-                    <label for="reason" class="col-sm-2 control-label">Reason</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="reason" id="reason" placeholder="Your Reason" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <button type="submit" class=" btn btn-primary">Apply</button>
-                        <a href="#" class="btn btn-danger modal-cancel">Cancel</a>
+            <!--</form>-->
+        <!--</div>-->
 
-                    </div>
+    <!--</div>-->
 
-                </div>
-            </form>
-        </div>
+<!--</div>-->
 
-    </div>
-
-</div>
+<!--<div class="cd-user-modal cd-user-modal-2">-->
+    <!--<div class="cd-user-modal-container">-->
 
 
-<div th:include="footer :: copy"></div>
+        <!--<div class="panel panel-info">-->
+            <!--&lt;!&ndash; Default panel contents &ndash;&gt;-->
+            <!--<div class="panel-heading">Hotel Open Application</div>-->
+            <!--<form class="form-horizontal" action="info.html" th:action="@{/hotel/open}" method="post">-->
+                <!--<div class="form-group">-->
+                    <!--<label for="reason" class="col-sm-2 control-label">Reason</label>-->
+                    <!--<div class="col-sm-10">-->
+                        <!--<input type="text" class="form-control" name="reason" id="reason" placeholder="Your Reason" />-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<div class="col-sm-offset-2 col-sm-10   col-md-4">-->
+                        <!--<button type="submit" class=" btn btn-primary">Apply</button>-->
+                        <!--<a href="#" class="btn btn-danger modal-cancel">Cancel</a>-->
+
+                    <!--</div>-->
+
+                <!--</div>-->
+            <!--</form>-->
+        <!--</div>-->
+
+    <!--</div>-->
+
+<!--</div>-->
 
 
 <!--Scripts-->
 
-<script src="../../static/js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}"></script>
-<script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-<script src="../../static/js/promptForm.js" th:src="@{/js/promptForm.js}"></script>
-<script src="../../static/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
-<script src="../../static/js/vendor/jquery.ui.widget.js" th:src="@{/js/vendor/jquery.ui.widget.js}"></script>
-<script src="../../static/js/jquery.iframe-transport.js" th:src="@{/js/jquery.iframe-transport.js}"></script>
-<script src="../../static/js/jquery.fileupload.js" th:src="@{/js/jquery.fileupload.js}"></script>
+<!--<script src="../../static/js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}"></script>-->
+<!--<script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>-->
+<!--<script src="../../static/js/promptForm.js" th:src="@{/js/promptForm.js}"></script>-->
+<!--<script src="../../static/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>-->
+<!--<script src="../../static/js/vendor/jquery.ui.widget.js" th:src="@{/js/vendor/jquery.ui.widget.js}"></script>-->
+<!--<script src="../../static/js/jquery.iframe-transport.js" th:src="@{/js/jquery.iframe-transport.js}"></script>-->
+<!--<script src="../../static/js/jquery.fileupload.js" th:src="@{/js/jquery.fileupload.js}"></script>-->
 
-<script th:inline="javascript">
-    var filePath ='' ;
+<!--<script th:inline="javascript">-->
+    <!--var filePath ='' ;-->
 
-    $(function () {
-        $('#fileupload').fileupload({
-            dataType: 'json',
-            done: function (e, data) {
-                $('#fileupload').text(data.result.name);
-                filePath = data.result.path;
-                document.getElementById('picUrl').value = filePath;
-                console.log('pic url ' + document.getElementById('picUrl').value);
-            },
+    <!--$(function () {-->
+        <!--$('#fileupload').fileupload({-->
+            <!--dataType: 'json',-->
+            <!--done: function (e, data) {-->
+                <!--$('#fileupload').text(data.result.name);-->
+                <!--filePath = data.result.path;-->
+                <!--document.getElementById('picUrl').value = filePath;-->
+                <!--console.log('pic url ' + document.getElementById('picUrl').value);-->
+            <!--},-->
 
-            progressall: function (e, data) {
-                var progress = parseInt(data.loaded / data.total * 100, 10);
-                $('#progress').find('.bar').css(
-                    'width',
-                    progress + '%'
-                );
-            }
+            <!--progressall: function (e, data) {-->
+                <!--var progress = parseInt(data.loaded / data.total * 100, 10);-->
+                <!--$('#progress').find('.bar').css(-->
+                    <!--'width',-->
+                    <!--progress + '%'-->
+                <!--);-->
+            <!--}-->
 
-        });
-    });
+        <!--});-->
+    <!--});-->
 
-    $(document).ready(function(){
-        var edit =/*[[${edit}]]*/ 'false';
-        console.log('edit' +edit);
-        if (edit === true) {
-            var $editPop = $('.my-pop-1');
-            $editPop.attr("disabled" , 'disabled');
-            $editPop.text('Edit Waiting For Approval');
-        }
-        var open= /*[[${open}]]*/ 'false';
-        console.log('open' + open);
-        if (open === true) {
-            var $openPop = $('.my-pop-2');
-            $openPop.attr("disabled" , 'disabled');
-            $openPop.text('Open Application Waiting For Approval');
-        }
+    <!--$(document).ready(function(){-->
+        <!--var edit =/*[[${edit}]]*/ 'false';-->
+        <!--console.log('edit' +edit);-->
+        <!--if (edit === true) {-->
+            <!--var $editPop = $('.my-pop-1');-->
+            <!--$editPop.attr("disabled" , 'disabled');-->
+            <!--$editPop.text('Edit Waiting For Approval');-->
+        <!--}-->
+        <!--var open= /*[[${open}]]*/ 'false';-->
+        <!--console.log('open' + open);-->
+        <!--if (open === true) {-->
+            <!--var $openPop = $('.my-pop-2');-->
+            <!--$openPop.attr("disabled" , 'disabled');-->
+            <!--$openPop.text('Open Application Waiting For Approval');-->
+        <!--}-->
 
-    });
-</script>
+    <!--});-->
+<!--</script>-->
 </body>
 </html>
