--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -15,9 +15,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="../../static/img/a.png" th:src="@{/img/a.png}" alt="ICON" />
+                    <img class="img-responsive" src="../../static/img/smallapp.jpg" th:src="@{/img/smallapp.jpg}" alt="ICON" />
                     <div class="intro-text">
-                        <span class="name">Tickets</span>
+                        <!--<span class="name">Tickets</span>-->
                         <span class="skills">Welcome to Tickets</span>
                     </div>
                 </div>
