--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -18,7 +18,7 @@
                     <img class="img-responsive" src="../../static/img/smallapp.jpg" th:src="@{/img/smallapp.jpg}" alt="ICON" />
                     <div class="intro-text">
                         <!--<span class="name">Tickets</span>-->
-                        <span class="skills">Welcome to Tickets</span>
+                        <span class="skills">Tickets</span>
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>会员登录</h2>
+                <h2>场馆登录</h2>
             </div>
         </div>
         <div class="row">
@@ -37,23 +37,23 @@
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                 <form name="sentMessage" id="contactForm" method="post" role="form"
-                      action="../member/index.html" th:action="@{/user/login}" >
+                      action="../site/info.html" th:action="@{/site/login}" >
                     <div class="form-group">
-                        <label for="mail">邮箱</label>
-                        <input type="email" class="form-control" name="username" id="mail" />
+                        <label for="siteID">场馆识别码</label>
+                        <input type="text" class="form-control" name="siteID" id="siteID" />
                     </div>
                     <div class="form-group">
                         <label for="password">密码</label>
                         <input type="password" class="form-control" name="password" id="password" />
                     </div>
                     <!--<div class="checkbox">-->
-                        <!--<label>-->
-                            <!--<input type="checkbox"/> Remember me-->
-                        <!--</label>-->
+                    <!--<label>-->
+                    <!--<input type="checkbox"/> Remember me-->
+                    <!--</label>-->
                     <!--</div>-->
                     <button type="submit" class=" btn btn-success">登录</button>
                 </form>
-                <a href="register.html" th:href="@{/user/goRegister}">会员注册</a>
+                <a href="register.html" th:href="@{/site/goRegister}">场馆注册</a>
             </div>
         </div>
 
